layout fixes and hiding scroll to top btn
- Fix layout issues
- Hide scroll to top button when scroll reaches to the bottom of page

--- a/resources/css/scss/sections/_content.scss
+++ b/resources/css/scss/sections/_content.scss
@@ -1546,6 +1546,15 @@ figure {
     }
 }
 
+.et_divi_builder {
+	.page-content {
+		padding-bottom: 0;
+		@include media (max-width, 1023px) {
+			padding-top: 10px;
+		}
+	}
+}
+
 //podcasts
 .podcast_iframe {
     width: 100%;
